force-app/src/objects/TR1__BHTK_Portal_Searcher_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Credentials__c</fullName>
        <description>Searcher credentials definition map in JSON format.</description>
        <inlineHelpText>Searcher credentials definition in JSON format such as:
{
   &quot;cvlibrary_registered_email&quot;:&quot;user@test.com&quot;,
   &quot;cvlibrary_username&quot;:&quot;usernameexample&quot;,
   &quot;cvlibrary_password&quot;:&quot;passexample&quot;
}</inlineHelpText>
        <label>Credentials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Searcher__c</fullName>
        <description>Textkernel searcher authentication metadata name</description>
        <label>Searcher</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TK_Portal_Searcher_Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TK Portal Searcher Credentials</label>
    <nameField>
        <displayFormat>PSC-{0000}</displayFormat>
        <label>TK Portal Searcher Credentials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TK Portal Searcher Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>